# remote-agentd

./: Cargo.toml  README.md  test_rust_ssh.py
.cargo/: config.toml
.github/workflows/: release.yml
crates/hashline/: Cargo.toml
crates/hashline/src/: apply.rs  block.rs  diff_preview.rs  format.rs  lib.rs  messages.rs  parser.rs  patcher.rs  prefixes.rs  recovery.rs  snapshots.rs  tokenizer.rs  types.rs
crates/remote-agentd/: Cargo.toml
crates/remote-agentd/src/: main.rs  mcp.rs
crates/remote-agentd/src/tools/: bash.rs  edit.rs  fetch.rs  find.rs  mod.rs  put.rs  read.rs  search.rs  sudo.rs  write.rs
