[workspace]
resolver = "2"
members = ["crates/hashline", "crates/remote-agentd"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
tokio = { version = "1", features = ["full"] }
regex = "1"
xxhash-rust = { version = "0.8", features = ["xxh32"] }
similar = "2"
globset = "0.4"
ignore = "0.4"
rayon = "1"
parking_lot = "0.12"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
