[package]
name = "remote-agentd"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
hashline = { path = "../hashline" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
regex.workspace = true
globset.workspace = true
ignore.workspace = true

[[bin]]
name = "remote-agentd"
path = "src/main.rs"
